--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap");
+
 body {
   background-image: url("./assets/unsplash_FIKD9t5_5zQ.jpg");
   background-size: cover;
